@@ -3,11 +3,7 @@ package io.ebeaninternal.server.type;
 import com.fasterxml.jackson.databind.JsonNode;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.introspect.AnnotatedField;
-import io.ebean.annotation.DbArray;
-import io.ebean.annotation.DbEnumType;
-import io.ebean.annotation.DbEnumValue;
-import io.ebean.annotation.EnumValue;
-import io.ebean.annotation.Platform;
+import io.ebean.annotation.*;
 import io.ebean.config.DatabaseConfig;
 import io.ebean.config.JsonConfig;
 import io.ebean.config.PlatformConfig;
@@ -34,125 +30,70 @@ import org.slf4j.LoggerFactory;
 import javax.persistence.AttributeConverter;
 import javax.persistence.EnumType;
 import java.io.File;
-import java.lang.reflect.Constructor;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.ParameterizedType;
 import java.lang.reflect.Type;
 import java.math.BigDecimal;
 import java.math.BigInteger;
-import java.net.Inet4Address;
-import java.net.Inet6Address;
-import java.net.InetAddress;
-import java.net.URI;
-import java.net.URL;
+import java.net.*;
 import java.sql.Date;
 import java.sql.Time;
 import java.sql.Timestamp;
 import java.sql.Types;
-import java.time.DayOfWeek;
-import java.time.Duration;
-import java.time.Instant;
-import java.time.Month;
-import java.time.MonthDay;
-import java.time.OffsetDateTime;
-import java.time.OffsetTime;
-import java.time.Year;
-import java.time.YearMonth;
-import java.time.ZoneId;
-import java.time.ZoneOffset;
-import java.time.ZonedDateTime;
-import java.util.Arrays;
-import java.util.Calendar;
-import java.util.Currency;
-import java.util.EnumSet;
-import java.util.HashSet;
-import java.util.Iterator;
-import java.util.LinkedHashMap;
-import java.util.List;
-import java.util.Locale;
-import java.util.Map;
-import java.util.ServiceLoader;
-import java.util.Set;
-import java.util.TimeZone;
-import java.util.UUID;
+import java.time.*;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 
 /**
  * Default implementation of TypeManager.
  * <p>
  * Manages the list of ScalarType that is available.
- * </p>
  */
 public final class DefaultTypeManager implements TypeManager {
 
   private static final Logger logger = LoggerFactory.getLogger(DefaultTypeManager.class);
 
   private final ConcurrentHashMap<Class<?>, ScalarType<?>> typeMap;
-
   private final ConcurrentHashMap<Integer, ScalarType<?>> nativeMap;
-
   private final ConcurrentHashMap<String, ScalarType<?>> logicalMap;
 
   private final DefaultTypeFactory extraTypeFactory;
 
   private final ScalarType<?> hstoreType = new ScalarTypePostgresHstore();
-
   private final ScalarTypeFile fileType = new ScalarTypeFile();
-
   private final ScalarType<?> charType = new ScalarTypeChar();
-
   private final ScalarType<?> charArrayType = new ScalarTypeCharArray();
-
   private final ScalarType<?> longVarcharType = new ScalarTypeLongVarchar();
-
   private final ScalarType<?> clobType = new ScalarTypeClob();
-
   private final ScalarType<?> byteType = new ScalarTypeByte();
-
   private final ScalarType<?> binaryType = new ScalarTypeBytesBinary();
-
   private final ScalarType<?> blobType = new ScalarTypeBytesBlob();
-
   private final ScalarType<?> varbinaryType = new ScalarTypeBytesVarbinary();
-
   private final ScalarType<?> longVarbinaryType = new ScalarTypeBytesLongVarbinary();
-
   private final ScalarType<?> shortType = new ScalarTypeShort();
-
   private final ScalarType<?> integerType = ScalarTypeInteger.INSTANCE;
-
   private final ScalarType<?> longType = new ScalarTypeLong();
-
   private final ScalarType<?> doubleType = new ScalarTypeDouble();
-
   private final ScalarType<?> floatType = new ScalarTypeFloat();
-
   private final ScalarType<?> bigDecimalType = new ScalarTypeBigDecimal();
-
   private final ScalarType<?> timeType = new ScalarTypeTime();
-
   private final ScalarType<?> urlType = new ScalarTypeURL();
   private final ScalarType<?> uriType = new ScalarTypeURI();
   private final ScalarType<?> localeType = new ScalarTypeLocale();
   private final ScalarType<?> currencyType = new ScalarTypeCurrency();
   private final ScalarType<?> timeZoneType = new ScalarTypeTimeZone();
-
   private final ScalarType<?> stringType = ScalarTypeString.INSTANCE;
-
   private final ScalarType<?> classType = new ScalarTypeClass();
 
   private final JsonConfig.DateTime jsonDateTime;
   private final JsonConfig.Date jsonDate;
 
   private final Object objectMapper;
-
   private final boolean objectMapperPresent;
-
   private final boolean postgres;
-
+  private final TypeJsonManager jsonManager;
   private final boolean offlineMigrationGeneration;
-
   private final EnumType defaultEnumType;
 
   // OPTIONAL ScalarTypes registered if Jackson/JsonNode is in the classpath
@@ -191,24 +132,20 @@ public final class DefaultTypeManager implements TypeManager {
     this.typeMap = new ConcurrentHashMap<>();
     this.nativeMap = new ConcurrentHashMap<>();
     this.logicalMap = new ConcurrentHashMap<>();
-
+    this.postgres = isPostgres(config.getDatabasePlatform());
     this.objectMapperPresent = config.getClassLoadConfig().isJacksonObjectMapperPresent();
     this.objectMapper = (objectMapperPresent) ? initObjectMapper(config) : null;
-
+    this.jsonManager = (objectMapperPresent) ? new TypeJsonManager(postgres, objectMapper, config.isJsonDirtyByDefault()) : null;
     this.extraTypeFactory = new DefaultTypeFactory(config);
-    this.postgres = isPostgres(config.getDatabasePlatform());
     this.arrayTypeListFactory = arrayTypeListFactory(config.getDatabasePlatform());
     this.arrayTypeSetFactory = arrayTypeSetFactory(config.getDatabasePlatform());
-
     this.offlineMigrationGeneration = DbOffline.isGenerateMigration();
-
     this.defaultEnumType = config.getDefaultEnumType();
 
     initialiseStandard(config);
     initialiseJavaTimeTypes(config);
     initialiseJodaTypes(config);
     initialiseJacksonTypes(config);
-
     loadTypesFromProviders(config, objectMapper);
     loadGeoTypeBinder(config);
 
@@ -489,7 +426,7 @@ public final class DefaultTypeManager implements TypeManager {
     if (objectMapper == null) {
       throw new IllegalArgumentException("Type [" + type + "] unsupported for @DbJson mapping - Jackson ObjectMapper not present");
     }
-    return ScalarTypeJsonObjectMapper.createTypeFor(postgres, (AnnotatedField) prop.getJacksonField(), (ObjectMapper) objectMapper, dbType, docType);
+    return ScalarTypeJsonObjectMapper.createTypeFor(jsonManager, (AnnotatedField) prop.getJacksonField(), dbType, docType);
   }
 
   /**
@@ -588,8 +525,7 @@ public final class DefaultTypeManager implements TypeManager {
   private ScalarTypeEnum<?> createEnumScalarType2(Class<?> enumType) {
     boolean integerType = true;
     Map<String, String> nameValueMap = new LinkedHashMap<>();
-    Field[] fields = enumType.getDeclaredFields();
-    for (Field field : fields) {
+    for (Field field : enumType.getDeclaredFields()) {
       EnumValue enumValue = AnnotationUtil.get(field, EnumValue.class);
       if (enumValue != null) {
         nameValueMap.put(field.getName(), enumValue.value());
@@ -652,8 +588,7 @@ public final class DefaultTypeManager implements TypeManager {
   }
 
   private ScalarTypeEnum<?> createEnumScalarTypePerExtentions(Class<? extends Enum<?>> enumType) {
-    Method[] methods = enumType.getMethods();
-    for (Method method : methods) {
+    for (Method method : enumType.getMethods()) {
       DbEnumValue dbValue = AnnotationUtil.get(method, DbEnumValue.class);
       if (dbValue != null) {
         boolean integerValues = DbEnumType.INTEGER == dbValue.storage();
@@ -668,7 +603,6 @@ public final class DefaultTypeManager implements TypeManager {
    * Create the Mapping of Enum fields to DB values using EnumValue annotations.
    * <p>
    * Return null if the EnumValue annotations are not present/used.
-   * </p>
    */
   private ScalarTypeEnum<?> createEnumScalarTypeDbValue(Class<? extends Enum<?>> enumType, Method method, boolean integerType, int length, boolean withConstraint) {
     Map<String, String> nameValueMap = new LinkedHashMap<>();
@@ -697,11 +631,11 @@ public final class DefaultTypeManager implements TypeManager {
     EnumToDbValueMap<?> beanDbMap = EnumToDbValueMap.create(integerType);
     int maxValueLen = 0;
     for (Map.Entry<String, String> entry : nameValueMap.entrySet()) {
-      String name = entry.getKey();
+      String name = entry.getKey().trim();
       String value = entry.getValue();
       maxValueLen = Math.max(maxValueLen, value.length());
-      Object enumValue = Enum.valueOf(enumType, name.trim());
-      beanDbMap.add(enumValue, value, name.trim());
+      Object enumValue = Enum.valueOf(enumType, name);
+      beanDbMap.add(enumValue, value, name);
     }
     if (dbColumnLength == 0 && !integerType) {
       dbColumnLength = maxValueLen;
@@ -711,31 +645,24 @@ public final class DefaultTypeManager implements TypeManager {
 
   /**
    * Automatically find any ScalarTypes by searching through the class path.
-   * <p>
-   * In avaje.properties define a list of packages in which ScalarTypes are
-   * found. This will search for any class that implements the ScalarType
-   * interface and register it with this TypeManager.
-   * </p>
    */
   private void initialiseCustomScalarTypes(BootupClasses bootupClasses) {
     for (Class<? extends ScalarType<?>> cls : bootupClasses.getScalarTypes()) {
       try {
         ScalarType<?> scalarType;
         if (objectMapper == null) {
-          scalarType = cls.newInstance();
+          scalarType = cls.getDeclaredConstructor().newInstance();
         } else {
           try {
             // first try objectMapper constructor
-            Constructor<? extends ScalarType<?>> constructor = cls.getConstructor(ObjectMapper.class);
-            scalarType = constructor.newInstance((ObjectMapper) objectMapper);
+            scalarType = cls.getDeclaredConstructor(ObjectMapper.class).newInstance(objectMapper);
           } catch (NoSuchMethodException e) {
-            scalarType = cls.newInstance();
+            scalarType = cls.getDeclaredConstructor().newInstance();
           }
         }
         addCustomType(scalarType);
       } catch (Exception e) {
-        String msg = "Error loading ScalarType [" + cls.getName() + "]";
-        logger.error(msg, e);
+        logger.error("Error loading ScalarType [" + cls.getName() + "]", e);
       }
     }
   }
@@ -755,8 +682,7 @@ public final class DefaultTypeManager implements TypeManager {
 
   @SuppressWarnings({"unchecked", "rawtypes"})
   private void initialiseScalarConverters(BootupClasses bootupClasses) {
-    List<Class<? extends ScalarTypeConverter<?, ?>>> foundTypes = bootupClasses.getScalarConverters();
-    for (Class<? extends ScalarTypeConverter<?, ?>> foundType : foundTypes) {
+    for (Class<? extends ScalarTypeConverter<?, ?>> foundType : bootupClasses.getScalarConverters()) {
       try {
         Class<?>[] paramTypes = TypeReflectHelper.getParams(foundType, ScalarTypeConverter.class);
         if (paramTypes.length != 2) {
@@ -768,7 +694,7 @@ public final class DefaultTypeManager implements TypeManager {
         if (wrappedType == null) {
           throw new IllegalStateException("Could not find ScalarType for: " + paramTypes[1]);
         }
-        ScalarTypeConverter converter = foundType.newInstance();
+        ScalarTypeConverter converter = foundType.getDeclaredConstructor().newInstance();
         ScalarTypeWrapper stw = new ScalarTypeWrapper(logicalType, wrappedType, converter);
         logger.debug("Register ScalarTypeWrapper from {} -> {} using:{}", logicalType, persistType, foundType);
         add(stw);
@@ -780,8 +706,7 @@ public final class DefaultTypeManager implements TypeManager {
 
   @SuppressWarnings({"unchecked", "rawtypes"})
   private void initialiseAttributeConverters(BootupClasses bootupClasses) {
-    List<Class<? extends AttributeConverter<?, ?>>> foundTypes = bootupClasses.getAttributeConverters();
-    for (Class<? extends AttributeConverter<?, ?>> foundType : foundTypes) {
+    for (Class<? extends AttributeConverter<?, ?>> foundType : bootupClasses.getAttributeConverters()) {
       try {
         Class<?>[] paramTypes = TypeReflectHelper.getParams(foundType, AttributeConverter.class);
         if (paramTypes.length != 2) {
@@ -793,7 +718,7 @@ public final class DefaultTypeManager implements TypeManager {
         if (wrappedType == null) {
           throw new IllegalStateException("Could not find ScalarType for: " + paramTypes[1]);
         }
-        AttributeConverter converter = foundType.newInstance();
+        AttributeConverter converter = foundType.getDeclaredConstructor().newInstance();
         ScalarTypeWrapper stw = new ScalarTypeWrapper(logicalType, wrappedType, new AttributeConverterAdapter(converter));
         logger.debug("Register ScalarTypeWrapper from {} -> {} using:{}", logicalType, persistType, foundType);
         add(stw);
@@ -825,12 +750,15 @@ public final class DefaultTypeManager implements TypeManager {
   }
 
   private void initialiseJavaTimeTypes(DatabaseConfig config) {
+
+    ZoneId zoneId = getZoneId(config);
+
     typeMap.put(java.nio.file.Path.class, new ScalarTypePath());
     addType(java.time.Period.class, new ScalarTypePeriod());
     addType(java.time.LocalDate.class, new ScalarTypeLocalDate(jsonDate));
     addType(java.time.LocalDateTime.class, new ScalarTypeLocalDateTime(jsonDateTime));
-    addType(OffsetDateTime.class, new ScalarTypeOffsetDateTime(jsonDateTime));
-    addType(ZonedDateTime.class, new ScalarTypeZonedDateTime(jsonDateTime));
+    addType(OffsetDateTime.class, new ScalarTypeOffsetDateTime(jsonDateTime, zoneId));
+    addType(ZonedDateTime.class, new ScalarTypeZonedDateTime(jsonDateTime, zoneId));
     addType(Instant.class, new ScalarTypeInstant(jsonDateTime));
     addType(DayOfWeek.class, new ScalarTypeDayOfWeek());
     addType(Month.class, new ScalarTypeMonth());
@@ -844,6 +772,11 @@ public final class DefaultTypeManager implements TypeManager {
     addType(java.time.LocalTime.class, (localTimeNanos) ? new ScalarTypeLocalTimeWithNanos() : new ScalarTypeLocalTime());
     boolean durationNanos = config.isDurationWithNanos();
     addType(Duration.class, (durationNanos) ? new ScalarTypeDurationWithNanos() : new ScalarTypeDuration());
+  }
+
+  private ZoneId getZoneId(DatabaseConfig config) {
+    final String dataTimeZone = config.getDataTimeZone();
+    return (dataTimeZone == null) ? ZoneOffset.systemDefault() : TimeZone.getTimeZone(dataTimeZone).toZoneId();
   }
 
   private void addType(Class<?> clazz, ScalarType<?> scalarType) {
@@ -890,23 +823,16 @@ public final class DefaultTypeManager implements TypeManager {
 
     nativeMap.put(DbPlatformType.HSTORE, hstoreType);
 
-    ScalarType<?> utilDateType = extraTypeFactory.createUtilDate(jsonDateTime, jsonDate);
-    addType(java.util.Date.class, utilDateType);
-
-    ScalarType<?> calType = extraTypeFactory.createCalendar(jsonDateTime);
-    addType(Calendar.class, calType);
-
-    ScalarType<?> mathBigIntType = extraTypeFactory.createMathBigInteger();
-    addType(BigInteger.class, mathBigIntType);
+    addType(java.util.Date.class, extraTypeFactory.createUtilDate(jsonDateTime, jsonDate));
+    addType(Calendar.class, extraTypeFactory.createCalendar(jsonDateTime));
+    addType(BigInteger.class, extraTypeFactory.createMathBigInteger());
 
     ScalarTypeBool booleanType = extraTypeFactory.createBoolean();
     addType(Boolean.class, booleanType);
     addType(boolean.class, booleanType);
-
     // register the boolean literals to the platform for DDL default values
     databasePlatform.setDbTrueLiteral(booleanType.getDbTrueLiteral());
     databasePlatform.setDbFalseLiteral(booleanType.getDbFalseLiteral());
-
     // always register Types.BOOLEAN to our boolean type
     nativeMap.put(Types.BOOLEAN, booleanType);
     if (booleanType.getJdbcType() == Types.BIT) {
@@ -915,7 +841,6 @@ public final class DefaultTypeManager implements TypeManager {
     }
 
     PlatformConfig.DbUuid dbUuid = config.getPlatformConfig().getDbUuid();
-
     if (offlineMigrationGeneration || (databasePlatform.isNativeUuidType() && dbUuid.useNativeType())) {
       addType(UUID.class, new ScalarTypeUUIDNative());
     } else {
@@ -1027,6 +952,7 @@ public final class DefaultTypeManager implements TypeManager {
     nativeMap.put(Types.TIMESTAMP, timestampType);
   }
 
+  @SuppressWarnings("rawtypes")
   private void addInetAddressType(ScalarType scalarType) {
     addType(InetAddress.class, scalarType);
     addType(Inet4Address.class, scalarType);
